project list improved
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@64 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/_project_list.html.erb
+++ b/app/views/layouts/_project_list.html.erb
@@ -22,6 +22,7 @@
   <% @projects.each do |project| %>
     <li id="project_<%= project.id%>" data-id="<%= project.id %>" class="project">
       <%= image_tag project.featured.image.url(:featured), {'data-id' => project.id} unless project.featured.nil? %>
+      <div class="handle">VIEW</div>
       <div class="project_overlay">
         <div class="project_name"><%= image_tag project.logo.image.url(:logo) unless project.logo.nil? %></div>
         <div class="project_subtitle"><%= project.subtitle %></div>
