project list browser compatibility
git-svn-id: svn+ssh://wafflestudio.net/home/thefron/svn/waffle@65 58158ecd-1a78-46b5-9736-0f4b7c5de568

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
 	<!--[if lt IE 8]>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/ie7-and-down.css" />
 	<![endif]-->
+	<!--[if IE 8]>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/ie8.css" />
+	<![endif]-->
   <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag :jquery %>
   <%= javascript_include_tag ['jquery.easing', 'jquery.nivo.slider', 'twitter-entities.js', 'jquery.tmpl.min', 'jquery.form', 'jquery.tipsy', 'jquery.colorbox-min', 'jquery.impromptu.min', 'jquery.slider', 'aga.min', 'application'] %>
