--- a/app/views/admin/members/_form_edit.html.erb
+++ b/app/views/admin/members/_form_edit.html.erb
@@ -85,6 +85,15 @@
         </td>
 			</tr>
 			<tr>
+				<td class="first" width="150"><strong>이전 프로젝트</strong></td>
+				<td class="last">
+          <% for project in Project.all %>
+            <%= check_box_tag 'member[prev_project_ids][]', project.id, @member.prev_projects.include?(project) %>
+            <%= project.name %>
+          <% end %>
+        </td>
+			</tr>
+			<tr>
 				<td class="first" width="150"><strong>이력서</strong></td>
 				<td class="last"><%= f.file_field 'resume' %><%= @member.resume_file_name if @member.resume.file? %></td>
 			</tr>
