--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -1,4 +1,16 @@
 <header>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	    if (d.getElementById(id)) return;
+	      js = d.createElement(s); js.id = id;
+	        js.src = "//connect.facebook.net/ko_KR/all.js#xfbml=1&appId=239820596089846";
+	          fjs.parentNode.insertBefore(js, fjs);
+	          }(document, 'script', 'facebook-jssdk'));
+	</script>
+  <div id="fb-wrapper">
+	  <div class="fb-like" data-href="http://www.facebook.com/wafflestudio" data-send="false" data-layout="button_count" data-width="120" data-show-faces="false" data-font="segoe ui"></div>
+	</div>
   <h1><a href="/">Wafflestudio</a></h1>
   <h2>We design develop delicious WEB</h2>
 </header>
