--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -918,3 +918,8 @@ footer {
 #top.hover {
 	background: url(/images/buttons/top.png) no-repeat;
 }
+
+#fb-wrapper {
+  margin-left: 28px;
+  padding-top: 15px;
+}
