Add missing id attribute

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -18,6 +18,6 @@
     <div class="text_area_wrapper">
       <%= f.text_area :message, {:title => '문의하실 내용을 입력해 주세요.'} %>
     </div>
-    <%= f.submit 'Send' %>
+    <%= f.submit 'Send', :id => 'contact_submit' %>
   </div>
 <% end %>
