Add Facebook meta tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:og="http://ogp.me/ns#"
+  xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
   <title>WaffleStudio</title>
   <meta charset="UTF-8" />
-  <meta name="keywords" content="Wafflestudio, 와플스튜디오, 웹개발, Web Development, snuev, 서울대학교" />
+  <meta name="keywords" content="WaffleStudio, 와플스튜디오, 웹개발, Web Development, snuev, 서울대학교" />
   <meta name="description" content="맛있는 웹을 만드는 동아리, 와플스튜디오입니다." />
-  <meta name="author" content="wafflestudio" />
+  <meta name="author" content="Wafflestudio" />
   <meta name="publisher" content="Hoseong Hwang" />
+  <meta property="og:title" content="WaffleStudio"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:image" content="http://wafflestudio.com/images/wafflestudio_logo.jpg"/>
+  <meta property="og:url" content="http://wafflestudio.com"/>
+  <meta property="og:description" content="맛있는 웹을 만드는 동아리, 와플스튜디오입니다." />
+  <meta property="fb:app_id" content="239820596089846"/>
   <%= csrf_meta_tag %>
   <!--[if IE]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
