Update Facebook information

--- a/app/views/layouts/_home.html.erb
+++ b/app/views/layouts/_home.html.erb
@@ -1,15 +1,6 @@
 <header>
-  <div id="fb-root"></div>
-  <script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	    if (d.getElementById(id)) return;
-	      js = d.createElement(s); js.id = id;
-	        js.src = "//connect.facebook.net/ko_KR/all.js#xfbml=1&appId=239820596089846";
-	          fjs.parentNode.insertBefore(js, fjs);
-	          }(document, 'script', 'facebook-jssdk'));
-	</script>
   <div id="fb-wrapper">
-	  <div class="fb-like" data-href="http://www.facebook.com/wafflestudio" data-send="false" data-layout="button_count" data-width="120" data-show-faces="false" data-font="segoe ui"></div>
+    <iframe class="fb-like" src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwafflestudio.com&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=segoe+ui&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 	</div>
   <h1><a href="/">Wafflestudio</a></h1>
   <h2>We design develop delicious WEB</h2>
