--- a/app/views/layouts/_about_us.html.erb
+++ b/app/views/layouts/_about_us.html.erb
@@ -5,7 +5,7 @@
 <article>
 
 	<hgroup>
-		<h2>맛있는 웹을 향한 열정!!</h2>
+		<h2>맛있는 웹을 향한 열정!!!</h2>
 		<h3>와플스튜디오는 대학생을 중심으로 결성된,<br />웹에서 공동의 상상력을 펼치는 서비스 창작 집단입니다.</h3>
 	</hgroup>
 	<ul id="about_us_body">
