--- a/app/assets/stylesheets/colorbox.css.scss
+++ b/app/assets/stylesheets/colorbox.css.scss
@@ -18,29 +18,29 @@
     The following rules are ordered and tabbed in a way that represents the
     order/nesting of the generated HTML, so that the structure easier to understand.
 */
-#cboxOverlay{background:url(asset-path('colorbox/overlay.png', 'assets')) repeat 0 0;}
+#cboxOverlay{background:url(asset-path('colorbox/overlay.png')) repeat 0 0;}
 #colorbox{}
-    #cboxTopLeft{width:21px; height:21px; background:url(asset-path('colorbox/controls.png', 'assets')) no-repeat -100px 0;}
-    #cboxTopRight{width:21px; height:21px; background:url(asset-path('colorbox/controls.png', 'assets')) no-repeat -129px 0;}
-    #cboxBottomLeft{width:21px; height:21px; background:url(asset-path('colorbox/controls.png', 'assets')) no-repeat -100px -29px;}
-    #cboxBottomRight{width:21px; height:21px; background:url(asset-path('colorbox/controls.png', 'assets')) no-repeat -129px -29px;}
-    #cboxMiddleLeft{width:21px; background:url(asset-path('colorbox/controls.png', 'assets')) left top repeat-y;}
-    #cboxMiddleRight{width:21px; background:url(asset-path('colorbox/controls.png', 'assets')) right top repeat-y;}
-    #cboxTopCenter{height:21px; background:url(asset-path('colorbox/border.png', 'assets')) 0 0 repeat-x;}
-    #cboxBottomCenter{height:21px; background:url(asset-path('colorbox/border.png', 'assets')) 0 -29px repeat-x;}
+    #cboxTopLeft{width:21px; height:21px; background:url(asset-path('colorbox/controls.png')) no-repeat -100px 0;}
+    #cboxTopRight{width:21px; height:21px; background:url(asset-path('colorbox/controls.png')) no-repeat -129px 0;}
+    #cboxBottomLeft{width:21px; height:21px; background:url(asset-path('colorbox/controls.png')) no-repeat -100px -29px;}
+    #cboxBottomRight{width:21px; height:21px; background:url(asset-path('colorbox/controls.png')) no-repeat -129px -29px;}
+    #cboxMiddleLeft{width:21px; background:url(asset-path('colorbox/controls.png')) left top repeat-y;}
+    #cboxMiddleRight{width:21px; background:url(asset-path('colorbox/controls.png')) right top repeat-y;}
+    #cboxTopCenter{height:21px; background:url(asset-path('colorbox/border.png')) 0 0 repeat-x;}
+    #cboxBottomCenter{height:21px; background:url(asset-path('colorbox/border.png')) 0 -29px repeat-x;}
     #cboxContent{background:#fff;}
         #cboxLoadedContent{margin-bottom:28px;}
-        #cboxLoadedContent.loading{background:url(asset-path('colorbox/loading.gif', 'assets')) no-repeat center center;}
+        #cboxLoadedContent.loading{background:url(asset-path('colorbox/loading.gif')) no-repeat center center;}
         #cboxTitle{position:absolute; bottom:4px; left:0; text-align:center; width:100%; color:#949494;}
         #cboxCurrent{position:absolute; bottom:4px; left:58px; color:#949494;}
         #cboxSlideshow{position:absolute; bottom:4px; right:30px; color:#0092ef;}
-        #cboxPrevious{position:absolute; bottom:0; left:0px; background:url(asset-path('colorbox/controls.png', 'assets')) no-repeat -75px 0px; width:25px; height:25px; text-indent:-9999px;}
+        #cboxPrevious{position:absolute; bottom:0; left:0px; background:url(asset-path('colorbox/controls.png')) no-repeat -75px 0px; width:25px; height:25px; text-indent:-9999px;}
         #cboxPrevious.hover{background-position:-75px -25px;}
-        #cboxNext{position:absolute; bottom:0; left:27px; background:url(asset-path('colorbox/controls.png', 'assets')) no-repeat -50px 0px; width:25px; height:25px; text-indent:-9999px;}
+        #cboxNext{position:absolute; bottom:0; left:27px; background:url(asset-path('colorbox/controls.png')) no-repeat -50px 0px; width:25px; height:25px; text-indent:-9999px;}
         #cboxNext.hover{background-position:-50px -25px;}
-        #cboxLoadingOverlay{background:url(asset-path('colorbox/loading_background.png', 'assets')) no-repeat center center;}
-        #cboxLoadingGraphic{background:url(asset-path('colorbox/loading.gif', 'assets')) no-repeat center center;}
-        #cboxClose{position:absolute; bottom:0; right:0; background:url(asset-path('colorbox/controls.png', 'assets')) no-repeat -25px 0px; width:25px; height:25px; text-indent:-9999px;}
+        #cboxLoadingOverlay{background:url(asset-path('colorbox/loading_background.png')) no-repeat center center;}
+        #cboxLoadingGraphic{background:url(asset-path('colorbox/loading.gif')) no-repeat center center;}
+        #cboxClose{position:absolute; bottom:0; right:0; background:url(asset-path('colorbox/controls.png')) no-repeat -25px 0px; width:25px; height:25px; text-indent:-9999px;}
         #cboxClose.hover{background-position:-25px -25px;}
 
 /*
