update to rails 4.0.0
ruby 2.0.0
update README
use permit when create, update model
validate attach file
update some js library
fix timeline position
fix route

--- a/app/views/admin/contacts/index.html.erb
+++ b/app/views/admin/contacts/index.html.erb
@@ -59,11 +59,8 @@ function change_status(id){
   });
 }
 $(function(){
-  $('tr.contact td:first-child').toggle(function(e){
-    $(this).parent().next().show();
-  }, function(e){
-    e.stopPropagation();
-    $(this).parent().next().hide();
+  $('tr.contact td:first-child').click(function (){
+    $(this).parent().next().toggle("fast");
   });
 });
 </script>
