--- a/app/views/layouts/_about_us.html.erb
+++ b/app/views/layouts/_about_us.html.erb
@@ -26,9 +26,9 @@
   <div id="timeline">
     <ul>
     <% start_date = Date.new(2007)
-       end_date = Date.new(2014) %>
+       end_date = Date.new(2018) %>
     <% @timelines.each do |timeline| %>
-      <li title="<%= "#{timeline.name} (#{timeline.took_place_at.strftime("%m/%d")})" %>" data-percent="<%= (timeline.took_place_at - start_date)/(end_date - start_date).to_f %>"></li>
+      <li title="<%= "#{timeline.name} (#{timeline.took_place_at.strftime("%m/%d")})" %>" data-percent="<%= ((timeline.took_place_at - start_date)/(end_date - start_date)).to_f %>"></li>
     <% end %>
     </ul>
   </div>
