--- a/app/views/admin/carousels/index.html.erb
+++ b/app/views/admin/carousels/index.html.erb
@@ -4,8 +4,8 @@
 <%= link_to image_tag('admin/add-icon.gif')+"new carousel", new_admin_carousel_path %>
 	<p>동작종류-값(url-주소, member&amp;project-id)<br/>그림크기:355x287</p>
 <div class="table">
-	<img src="/images/admin/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-	<img src="/images/admin/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+	<%= image_tag 'admin/bg-th-left.gif', width:"8", height:"7", alt:"", class:"left" %>
+	<%= image_tag 'admin/bg-th-right.gif', width:"8", height:"7", alt:"", class:"right" %>
 <table class="listing" cellpadding="0" cellspacing="0">
   <tr>
     <th class="first">image</th>
