--- a/app/views/admin/members/_form_edit.html.erb
+++ b/app/views/admin/members/_form_edit.html.erb
@@ -16,8 +16,8 @@
 
   <div class="table">
 		<table class="listing form" cellpadding="0" cellspacing="0">
-			<img src="/images/admin/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-			<img src="/images/admin/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+      <%= image_tag 'admin/bg-th-left.gif', width:"8", height:"7", alt:"", class:"left" %>
+      <%= image_tag 'admin/bg-th-right.gif', width:"8", height:"7", alt:"", class:"right" %>
 			<tr>
 				<th class="full" colspan="2"><%= yield(:title) %></th>
 			</tr>
