--- a/app/views/admin/projects/_form_edit.html.erb
+++ b/app/views/admin/projects/_form_edit.html.erb
@@ -16,8 +16,8 @@
 
   <div class="table">
 		<table class="listing form" cellpadding="0" cellspacing="0">
-			<img src="/images/admin/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-			<img src="/images/admin/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+      <%= image_tag 'admin/bg-th-left.gif', width:"8", height:"7", alt:"", class:"left" %>
+      <%= image_tag 'admin/bg-th-right.gif', width:"8", height:"7", alt:"", class:"right" %>
 			<tr>
 				<th class="full" colspan="2"><%= yield(:title) %></th>
 			</tr>
@@ -35,7 +35,7 @@
 			</tr>
 			<tr>
 				<td class="first" width="150"><strong>시작일</strong></td>
-				<td class="last"><%= f.text_field 'start_date' %></td>
+				<td class="last"><%= f.date_field 'start_date' %></td>
 			</tr>
 			<tr>
 				<td class="first" width="150"><strong>상태</strong></td>
