--- a/app/views/admin/projects/index.html
+++ b/app/views/admin/projects/index.html
@@ -3,8 +3,8 @@
 <p><%= flash[:error] %></p>
 <%= link_to image_tag('admin/add-icon.gif')+"새 프로젝트", new_admin_project_path %>
 <div class="table">
-	<img src="/images/admin/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-	<img src="/images/admin/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+  <%= image_tag 'admin/bg-th-left.gif', width:"8", height:"7", alt:"", class:"left" %>
+  <%= image_tag 'admin/bg-th-right.gif', width:"8", height:"7", alt:"", class:"right" %>
 <table class="listing" cellpadding="0" cellspacing="0">
   <tr>
     <th class="first">이름</th>
