--- a/app/views/admin/timelines/index.html.erb
+++ b/app/views/admin/timelines/index.html.erb
@@ -13,8 +13,8 @@
 </div>
 
 <div class="table">
-	<img src="/images/admin/bg-th-left.gif" width="8" height="7" alt="" class="left" />
-	<img src="/images/admin/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+	<%= image_tag 'admin/bg-th-left.gif', width:"8", height:"7", alt:"", class:"left" %>
+	<%= image_tag 'admin/bg-th-right.gif', width:"8", height:"7", alt:"", class:"right" %>
 <table class="listing" cellpadding="0" cellspacing="0">
   <tr>
     <th class="first">이름</th>
