change tweeter to facebook timeline

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -94,6 +94,7 @@ nav.navigation {
   }
 }
   /*tweet box*/
+/*
 #tweetbox {
   width: 340px;
   position: absolute;
@@ -149,6 +150,13 @@ nav.navigation {
   position: absolute;
   right: 5px;
   top: 0px;
+}
+*/
+  /*facebook social plugin*/
+#waffle_facebook {
+  position: absolute;
+  top: 240px;
+  left: 20px;
 }
   /*carousel*/
 #carousel {
