--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -752,6 +752,7 @@ a.nivo-prevNav {
       width: 100%;
       height: 100%;
       overflow: auto;
+      line-height: 1.5em;
     }
   }
   .members {
