--- a/app/assets/stylesheets/colorbox.css.scss
+++ b/app/assets/stylesheets/colorbox.css.scss
@@ -40,7 +40,7 @@
         #cboxNext.hover{background-position:-50px -25px;}
         #cboxLoadingOverlay{background:url(asset-path('colorbox/loading_background.png')) no-repeat center center;}
         #cboxLoadingGraphic{background:url(asset-path('colorbox/loading.gif')) no-repeat center center;}
-        #cboxClose{position:absolute; bottom:0; right:0; background:url(asset-path('colorbox/controls.png')) no-repeat -25px 0px; width:25px; height:25px; text-indent:-9999px;}
+        #cboxClose{position:absolute; bottom:0; right:0; background:url(asset-path('colorbox/controls.png')) no-repeat -25px 0px; width:25px; height:25px; text-indent:-9999px; border: 0px;}
         #cboxClose.hover{background-position:-25px -25px;}
 
 /*
