--- a/app/views/admin/carousels/index.html.erb
+++ b/app/views/admin/carousels/index.html.erb
@@ -23,7 +23,7 @@
       <td><%= select_tag :action_type, options_for_select(Carousel.available_action_types, carousel.action[:type]).html_safe %></td>
       <td><%= text_field_tag :action_value, carousel.action[:value] %></td>
       <td><%= link_to '변경', "#", onclick: "update_carousel(#{carousel.id});" %></td>
-      <td><%= link_to image_tag('admin/hr.gif'), admin_carousel_url(carousel), :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to image_tag('admin/hr.gif'), admin_carousel_url(carousel), data: { :confirm => 'Are you sure?' }, :method => :delete %></td>
     </tr>
   <% end %>
   </table>
