--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -19,7 +19,7 @@
       <td><%= link_to member.name, edit_admin_member_path(member) %></td>
       <td><%= member.tags.to_a.join(', ') || '' %></td>
       <td><%= link_to image_tag('admin/edit-icon.gif'), edit_admin_member_path(member) %></td>
-      <td><%= link_to image_tag('admin/hr.gif'), admin_member_url(member), :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to image_tag('admin/hr.gif'), admin_member_url(member), data: { :confirm => 'Are you sure?' }, :method => :delete %></td>
     </tr>
   <% end %>
   </table>
