--- a/app/views/admin/projects/index.html
+++ b/app/views/admin/projects/index.html
@@ -18,7 +18,7 @@
     <td><%= link_to project.name, edit_admin_project_path(project) %></td>
     <td><%= project.status %></td>
     <td><%= link_to image_tag('admin/edit-icon.gif'), edit_admin_project_path(project) %></td>
-    <td><%= link_to image_tag('admin/hr.gif'), admin_project_url(project), :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to image_tag('admin/hr.gif'), admin_project_url(project), data: { :confirm => 'Are you sure?' }, :method => :delete %></td>
   </tr>
 <% end %>
 </table>
