--- a/app/views/admin/timelines/index.html.erb
+++ b/app/views/admin/timelines/index.html.erb
@@ -32,7 +32,7 @@
       <td>
         <%= link_to '변경', "#", onclick: "update_timeline(#{timeline.id})" %>
       </td>
-      <td><%= link_to image_tag('admin/hr.gif'), admin_timeline_url(timeline), :confirm => 'Are you sure?', :method => :delete %></td>
+      <td><%= link_to image_tag('admin/hr.gif'), admin_timeline_url(timeline), data: { :confirm => 'Are you sure?' }, :method => :delete %></td>
     </tr>
   <% end %>
   </table>
