활동 멤버 / OB 멤버 바꾸는 버튼을 좀 더 눌러보고 싶게 만듬

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -357,6 +357,9 @@ a.nivo-prevNav {
     font-size: 14px;
     background: white;
     box-shadow: 1px 1px 1px black;
+    span {
+      float: right;
+    }
   }
 }
 #member_tags {
