문의 내용에 줄바꿈 등이 보이도록 css 추가

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -284,6 +284,7 @@ table.listing tr.contact_content {
 table.listing tr.contact_content td {
   text-align: left;
   padding: 1em;
+  white-space: pre-line;
 }
 table.listing .bg td {
 	background:#ECECEC;
